Update source file ron_onboarding.pot

--- a/translations/parent_text_crisis_romania/en/ron_onboarding.pot
+++ b/translations/parent_text_crisis_romania/en/ron_onboarding.pot
@@ -134,7 +134,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "📍 Do you live in a rural or urban area?"
+msgid "📍 Where are you located?"
 msgstr ""
 
 #. type=text
@@ -298,13 +298,13 @@ msgstr ""
 #. type=quick_replies
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
-msgid "rural"
+msgid "<loc1>"
 msgstr ""
 
 #. type=quick_replies
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
-msgid "urban"
+msgid "<loc2>"
 msgstr ""
 
 #. type=quick_replies
@@ -508,13 +508,13 @@ msgstr ""
 #. type=arguments
 #. This is an argument and it may be used to identify a corresponding quick reply
 msgctxt "arguments"
-msgid "rural"
+msgid "<loc1>"
 msgstr ""
 
 #. type=arguments
 #. This is an argument and it may be used to identify a corresponding quick reply
 msgctxt "arguments"
-msgid "urban"
+msgid "<loc2>"
 msgstr ""
 
 #. type=arguments
