--- a/translations/plh_kids_teens_za/en/main.pot
+++ b/translations/plh_kids_teens_za/en/main.pot
@@ -10,31 +10,6 @@ msgstr ""
 
 #. type=data_list
 msgctxt "data_list"
-msgid "Gogo"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "Mkhulu"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "Mother"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "Malume"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "Father"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
 msgid "Man"
 msgstr ""
 
@@ -46,6 +21,16 @@ msgstr ""
 #. type=data_list
 msgctxt "data_list"
 msgid "Prefer not to say"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "Partners"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "Donors"
 msgstr ""
 
 #. type=data_list
@@ -70,12 +55,27 @@ msgstr ""
 
 #. type=data_list
 msgctxt "data_list"
-msgid "Partners"
+msgid "Gogo"
 msgstr ""
 
 #. type=data_list
 msgctxt "data_list"
-msgid "Donors"
+msgid "Mkhulu"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "Mother"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "Malume"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "Father"
 msgstr ""
 
 #. type=data_list
@@ -225,6 +225,104 @@ msgstr ""
 
 #. type=global
 msgctxt "global"
+msgid "Would you like to create an account? This will allow you to retrieve your data if you lose your device."
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Sign in"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Sign in with Apple"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Sign in with Google"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Sign out"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "You are logged in."
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Delete account"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Are you sure you want to delete your account?"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "This action is permanent and cannot be undone. You will lose all your progress."
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Yes"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "No"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid ""
+"It looks like you've logged in on another device before. Would you like to continue from where you left off? \n"
+"\n"
+"If you do, any progress made on this device will be lost."
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Load saved progress"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "ParentApp"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "ParentApp South Africa"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "5 December 2024"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Tap and choose"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "User ID"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Skip"
+msgstr ""
+
+#. type=global
+msgctxt "global"
 msgid "List"
 msgstr ""
 
@@ -276,6 +374,11 @@ msgstr ""
 #. type=global
 msgctxt "global"
 msgid "Let’s Begin"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Continue"
 msgstr ""
 
 #. type=global
@@ -477,12 +580,23 @@ msgstr ""
 
 #. type=global
 msgctxt "global"
+msgid "Account"
+msgstr ""
+
+#. type=global
+msgctxt "global"
 msgid "General"
 msgstr ""
 
 #. type=global
 msgctxt "global"
 msgid "Feedback"
+msgstr ""
+
+#. type=global
+#. The string @global.app_name should not be translated.
+msgctxt "global"
+msgid "About @global.app_name"
 msgstr ""
 
 #. type=global
@@ -503,6 +617,11 @@ msgstr ""
 #. type=global
 msgctxt "global"
 msgid "Save"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Language"
 msgstr ""
 
 #. type=global
@@ -537,120 +656,6 @@ msgid "Tap and type"
 msgstr ""
 
 #. type=global
-msgctxt "global"
-msgid "SinovuyoApp"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "5 December 2024"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Tap and choose"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Would you like to create an account? This will allow you to retrieve your data if you lose your device."
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Sign in"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Sign in with Apple"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Sign in with Google"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Sign out"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "You are logged in."
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Account"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Delete account"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Are you sure you want to delete your account?"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "This action is permanent and cannot be undone. You will lose all your progress."
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Yes"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "No"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid ""
-"It looks like you've logged in on another device before. Would you like to continue from where you left off? \n"
-"\n"
-"If you do, any progress made on this device will be lost."
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Load saved progress"
-msgstr ""
-
-#. type=global
-#. The string @global.app_name should not be translated.
-msgctxt "global"
-msgid "About @global.app_name"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Language"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "User ID"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Skip"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Continue"
-msgstr ""
-
-#. type=global
 #. The string @global.app_name should not be translated.
 msgctxt "global"
 msgid "Welcome to @global.app_name"
@@ -667,69 +672,28 @@ msgid "I am a..."
 msgstr ""
 
 #. type=template
-#. The string @local.countdown_days should not be translated.
 msgctxt "template"
-msgid "Countdown days: @local.countdown_days"
+msgid "What you need"
 msgstr ""
 
 #. type=template
 msgctxt "template"
-msgid "Choose a number of days to count down"
+msgid "Steps"
 msgstr ""
 
 #. type=template
 msgctxt "template"
-msgid "Save"
+msgid "More tips"
 msgstr ""
 
 #. type=template
 msgctxt "template"
-msgid "Continue"
+msgid "Try also"
 msgstr ""
 
 #. type=template
 msgctxt "template"
-msgid "Change countdown days"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Templates"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Dynamic data"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Reset app"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Open feedback"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Close feedback"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Import user"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Developer mode"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Exit developer mode"
+msgid "Quick Parenting Tips"
 msgstr ""
 
 #. type=template
@@ -852,112 +816,6 @@ msgid "Start your first parenting workshop"
 msgstr ""
 
 #. type=template
-#. The string @global.app_name should not be translated.
-msgctxt "template"
-msgid "@global.app_name has downloaded an update. Please restart the app to finish installation."
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Restart"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Submit"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Tap and type"
-msgstr ""
-
-#. type=template
-#. The string @local.submit should not be translated.
-msgctxt "template"
-msgid "To launch the app in developer mode, enter your developer code in the box below and press @local.submit."
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "You have entered an incorrect code."
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "This code is correct."
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Enter developer mode"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Quick Parenting Tips"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Copy code"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Copied!"
-msgstr ""
-
-#. type=template
-#. The string @local.sync_latest should not be translated.
-msgctxt "template"
-msgid "Last sync at: @local.sync_latest"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "This device has never been synced. Sync to reveal your code."
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Sync now"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Syncing..."
-msgstr ""
-
-#. type=template
-#. The following strings should not be translated: 
-#.      @local.child_age_input
-#.      @calc(@local.child_age_input <10 ? "child" : "teen")
-msgctxt "template"
-msgid "@calc(@local.child_age_input <10 ? \"child\" : \"teen\")"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "What you need"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Steps"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "More tips"
-msgstr ""
-
-#. type=template
-msgctxt "template"
-msgid "Try also"
-msgstr ""
-
-#. type=template
 #. The string @local.workshop_data.in_text_title should not be translated.
 msgctxt "template"
 msgid "You will get more support in the @local.workshop_data.in_text_title."
@@ -994,28 +852,140 @@ msgid "Re-access the @local.workshop_data.in_text_title"
 msgstr ""
 
 #. type=template
-#. The string @item.id should not be translated.
+#. The string @global.app_name should not be translated.
 msgctxt "template"
-msgid "Activity ID: @item.id"
-msgstr ""
-
-#. type=template
-#. The string @item.child_age_list should not be translated.
-msgctxt "template"
-msgid "Child_age_list: @item.child_age_list"
-msgstr ""
-
-#. type=template
-#. The following strings should not be translated: 
-#.      @item.locked
-#.      !@item.child_age_list
-#.      @item.child_age_list.includes
-#.      @fields.child_age
-msgctxt "template"
-msgid "@item.locked && (!@item.child_age_list || @item.child_age_list.includes(@fields.child_age))"
+msgid "@global.app_name has downloaded an update. Please restart the app to finish installation."
 msgstr ""
 
 #. type=template
 msgctxt "template"
-msgid "Randomise"
+msgid "Restart"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Copy code"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Copied!"
+msgstr ""
+
+#. type=template
+#. The string @local.sync_latest should not be translated.
+msgctxt "template"
+msgid "Last sync at: @local.sync_latest"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "This device has never been synced. Sync to reveal your code."
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Sync now"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Syncing..."
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Continue"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Templates"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Dynamic data"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Reset app"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Open feedback"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Close feedback"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Import user"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Developer mode"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Exit developer mode"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Submit"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Tap and type"
+msgstr ""
+
+#. type=template
+#. The string @local.submit should not be translated.
+msgctxt "template"
+msgid "To launch the app in developer mode, enter your developer code in the box below and press @local.submit."
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "You have entered an incorrect code."
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "This code is correct."
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Enter developer mode"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Change countdown days"
+msgstr ""
+
+#. type=template
+#. The string @local.countdown_days should not be translated.
+msgctxt "template"
+msgid "Countdown days: @local.countdown_days"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Choose a number of days to count down"
+msgstr ""
+
+#. type=template
+msgctxt "template"
+msgid "Save"
 msgstr ""
