resync wvi crisis text

--- a/translations/parent_text_crisis_ukraine/en/ukr_onboarding.pot
+++ b/translations/parent_text_crisis_ukraine/en/ukr_onboarding.pot
@@ -139,6 +139,11 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
+msgid "Where are you located?"
+msgstr ""
+
+#. type=text
+msgctxt "text"
 msgid "📲 How would you prefer to receive content — with audio guides, with video guides, or just text?"
 msgstr ""
 
@@ -281,19 +286,25 @@ msgstr ""
 #. type=quick_replies
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
-msgid "Living in a camp or shelter"
+msgid "Currently displaced"
 msgstr ""
 
 #. type=quick_replies
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
-msgid "Living in a house or apartment"
+msgid "Living at my permanent place of residence"
 msgstr ""
 
 #. type=quick_replies
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
-msgid "Moving around often"
+msgid "Batumi"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "Tbilisi"
 msgstr ""
 
 #. type=quick_replies
@@ -455,19 +466,25 @@ msgstr ""
 #. type=arguments
 #. This is an argument and it may be used to identify a corresponding quick reply
 msgctxt "arguments"
-msgid "living in a camp or shelter"
+msgid "currently displaced"
 msgstr ""
 
 #. type=arguments
 #. This is an argument and it may be used to identify a corresponding quick reply
 msgctxt "arguments"
-msgid "living in a house or apartment"
+msgid "living at my permanent place of residence"
 msgstr ""
 
 #. type=arguments
 #. This is an argument and it may be used to identify a corresponding quick reply
 msgctxt "arguments"
-msgid "moving around often"
+msgid "batumi"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "tbilisi"
 msgstr ""
 
 #. type=arguments
