Update source file ukr_navigation.pot

--- a/translations/parent_text_crisis_ukraine/en/ukr_navigation.pot
+++ b/translations/parent_text_crisis_ukraine/en/ukr_navigation.pot
@@ -79,6 +79,11 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
+msgid "{child_protection_referrals}"
+msgstr ""
+
+#. type=text
+msgctxt "text"
 msgid "What would you like to do?"
 msgstr ""
 
@@ -606,6 +611,12 @@ msgstr ""
 #. type=quick_replies
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
+msgid "Child Protection"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
 msgid "Get other emergency contacts"
 msgstr ""
 
@@ -918,6 +929,12 @@ msgstr ""
 #. This is an argument and it may be used to identify a corresponding quick reply
 msgctxt "arguments"
 msgid "natural disasters"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "child protection"
 msgstr ""
 
 #. type=arguments
