Update source file ukr_onboarding.pot

--- a/translations/parent_text_crisis_ukraine/en/ukr_onboarding.pot
+++ b/translations/parent_text_crisis_ukraine/en/ukr_onboarding.pot
@@ -139,11 +139,6 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "Where are you located?"
-msgstr ""
-
-#. type=text
-msgctxt "text"
 msgid "📲 How would you prefer to receive content — with audio guides, with video guides, or just text?"
 msgstr ""
 
@@ -286,25 +281,19 @@ msgstr ""
 #. type=quick_replies
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
-msgid "Currently displaced"
+msgid "Living in a camp or shelter"
 msgstr ""
 
 #. type=quick_replies
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
-msgid "Living at my permanent place of residence"
+msgid "Living in a house or apartment"
 msgstr ""
 
 #. type=quick_replies
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
-msgid "Batumi"
-msgstr ""
-
-#. type=quick_replies
-#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
-msgctxt "quick_replies"
-msgid "Tbilisi"
+msgid "Moving around often"
 msgstr ""
 
 #. type=quick_replies
@@ -466,25 +455,19 @@ msgstr ""
 #. type=arguments
 #. This is an argument and it may be used to identify a corresponding quick reply
 msgctxt "arguments"
-msgid "currently displaced"
+msgid "living in a camp or shelter"
 msgstr ""
 
 #. type=arguments
 #. This is an argument and it may be used to identify a corresponding quick reply
 msgctxt "arguments"
-msgid "living at my permanent place of residence"
+msgid "living in a house or apartment"
 msgstr ""
 
 #. type=arguments
 #. This is an argument and it may be used to identify a corresponding quick reply
 msgctxt "arguments"
-msgid "batumi"
-msgstr ""
-
-#. type=arguments
-#. This is an argument and it may be used to identify a corresponding quick reply
-msgctxt "arguments"
-msgid "tbilisi"
+msgid "moving around often"
 msgstr ""
 
 #. type=arguments
